--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -43,7 +43,8 @@ body * {
   color: var(--text-color)
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   /*margin-right: auto;
   margin-left: auto;
   pode ser substituido pelo atalho, mas somente nas laterais*/
