--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -92,11 +92,14 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-out 0.3s;
 }
 
-#switch button {
-  right: 0;
-  left: initial;
+.light #switch button {
+  animation: slide-in 0.3s forwards;
+  /*right: 0;
+  left: initial;*/
 }
 
 #switch span{
@@ -189,4 +192,28 @@ ul li a{
     .ligth {
       --bg-url: url(./assents/bg-destok-light.jpg);
     }
+   }
+
+   /* animation */
+   @keyframes slide-in {
+    from {
+      left: 0;
+    }
+    to {
+      right: 50%;
+    }
+   }
+
+   @keyframes slide-out {
+    from {
+      left: 50%;
+    }
+
+    to {
+      left: 0;
+    }
+   }
+
+   #switch button:hover {
+    outline: 8px solid var(--highlight-color);
    }
